--- a/src/styles/Dropdown.css
+++ b/src/styles/Dropdown.css
@@ -7,12 +7,12 @@
 }
 
 .dropdown-menu li {
-    background: #1888ff;
+    background: #9f9e9e;
     cursor: pointer;
 }
 
 .dropdown-menu li:hover {
-    background: #5cabff;
+    background: #bebbbb;
 }
 
 .dropdown-menu.clicked {
