--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -45,7 +45,7 @@
 }
 
 .nav-links:hover {
-    background-color: #1888ff;
+    background-color: #9f9e9e;
     border-radius: 4px;
     transition: all 0.2s ease-out;
 }
@@ -99,7 +99,7 @@
     }
 
     .nav-links:hover {
-        background-color: #1888ff;
+        background-color: #9f9e9e;
         border-radius: 0;
     }
 
@@ -132,7 +132,7 @@
         margin: 2rem auto;
         border-radius: 4px;
         width: 80%;
-        background: #1888ff;
+        background: #9f9e9e;
         text-decoration: none;
         color: #fff;
         font-size: 1.5rem;
@@ -140,7 +140,7 @@
 
     .nav-links-mobile:hover {
         background: #fff;
-        color: #1888ff;
+        color: #9f9e9e;
         transition: 250ms;
     }
 
