--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,29 +1,51 @@
 .home-title {
-    -webkit-text-stroke: 0.5rem black;
+    -webkit-text-stroke: 0.5vw black;
     color: white;
-    font-size: 10rem;
+    font-size: 10vw;
     text-align: center;
 }
 
 .home-subtitle {
-    -webkit-text-stroke: 0.3rem black;
+    -webkit-text-stroke: 0.4vw black;
     color: white;
-    font-size: 5rem;
+    font-size: 6vw;
     text-align: center;
 }
 
 .yt-button {
-    width: 20%;
-    position: relative;
-    top: 0;
-    left: 0;
-    transform: translate(100%, 20%);
+    width: 25%;
+    margin-top: 5vh;
+    margin-left: 15vw;
+    margin-right: 20vw;
 }
 
 .twitch-button {
-    width: 20%;
-    position: relative;
-    top: 0;
-    left: 0;
-    transform: translate(200%, 10%);
+    width: 25%;
+}
+
+@media screen and (max-width: 750px) {
+    .home-title {
+        -webkit-text-stroke: 1vw black;
+        color: white;
+        font-size: 20vw;
+        text-align: center;
+    }
+
+    .home-subtitle {
+        -webkit-text-stroke: 1vw black;
+        color: white;
+        font-size: 15vw;
+        text-align: center;
+    }
+
+    .yt-button {
+        width: 30%;
+        margin-top: 5vh;
+        margin-left: 10vw;
+        margin-right: 20vw;
+    }
+
+    .twitch-button {
+        width: 30%;
+    }
 }
